Fix for bug 83650 (textarea control has problems with caret positioning at end) and bug 97207 (textarea pastes sometimes misplaced by failing to reposition).

- Added new utility method GetOriginToViewOffset().

  - Modified nsPresShell::HandleEvent(), nsBoxFrame::GetFrameForPoint(),
    and nsContainerFrame::GetFrameForPointUsing() to factor in the
    offset from GetOriginToViewOffset() to insure that the point
    used is always transformed into the correct coordinate system.

Files modified:

    mozilla/layout/base/public/nsIFrame.h
    mozilla/layout/html/base/src/nsContainerFrame.cpp
    mozilla/layout/html/base/src/nsFrame.cpp
    mozilla/layout/html/base/src/nsFrame.h
    mozilla/layout/html/base/src/nsPresShell.cpp
    mozilla/layout/xul/base/src/nsBoxFrame.cpp

r=kmcclusk@netscape.com  sr=sfraser@netscape.com